<resources>
    <string name="app_name">Marvel World</string>
    <string name="image_from_character_list_item">Image from character list item</string>
    <string name="image_for_comic_list_item">Image for comic list item</string>
    <string name="image_for_creator_list_item">Image for creator list item</string>
    <string name="image_for_series_list_item">Image for series list item</string>
    <string name="image_for_event_list_item">Image for event list item</string>
    <string name="button_for_setting_resource_as_favorite">Button for setting resource as favorite</string>
    <string name="button_for_sharing_resource">Button for sharing resource</string>
    <string name="image_for_resource_details">Image for resource details</string>
    <string name="button_for_revealing_urls_associated_to_the_resource">Button for revealing urls associated to the resource</string>
    <string name="button_for_closing_urls_dialog">Button for closing urls dialog</string>
    <string name="published">Published</string>
    <string name="expanded_resource_image">Expanded resource image</string>
    <string name="button_for_closing_image_dialog">Button for closing image dialog</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="delete_account">DELETE ACCOUNT</string>
    <string name="my_profile">My profile</string>
    <string name="favorites">Favorites</string>
    <string name="about_us">About us</string>
    <string name="image_profile">Image profile</string>
    <string name="cropper">Cropper</string>
    <string name="button_for_uploading_profile_image">Button for upload profile image</string>
    <string name="log_out">Log out</string>
    <string name="company_description_cock">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut congue erat at mi consequat, sed imperdiet ligula consequat. Nulla rutrum elit enim, id fringilla mi tempus nec. Vivamus ipsum mi, ultricies id risus eu, imperdiet tristique arcu. Duis vehicula erat ligula, vel dapibus libero lacinia sed. Sed ac dapibus mi.</string>
    <string name="member_team_description_mock">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc euismod tortor lectus, eu molestie sem facilisis nec. Class aptent taciti.</string>
    <string name="member_picture">Member picture</string>
    <string name="member_picture_frame">Member picture frame</string>
    <string name="username_mock">Username</string>
    <string name="marvel_world_logo">Marvel world logo</string>
    <string name="filter">Filter</string>
    <string name="filters">Filters</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="button_for_closing_filter_screen">Button for closing filter screen</string>
    <string name="clear_filters">CLEAR</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="or">OR</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="repeat_password">Repeat password</string>
    <string name="don_t_have_an_account">Don\'t have an account?&#160;</string>
    <string name="sign_up">Sign up</string>
    <string name="have_an_account">Have an account?&#160;</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="sign_in_with_facebook">Sign in with facebook</string>
    <string name="character">Character</string>
    <string name="characters">Characters</string>
    <string name="comic">Comic</string>
    <string name="comics">Comics</string>
    <string name="event">Event</string>
    <string name="events">Events</string>
    <string name="series">Series</string>
    <string name="story">Story</string>
    <string name="stories">Stories</string>
    <string name="creator">Creator</string>
    <string name="creators">Creators</string>
    <string name="wrong_type_of_resource">Wrong type of resource</string>
    <string name="sing_in_failed">Sign in failed!</string>
    <string name="facebook_app_id">3541055272608153</string>
    <string name="fb_login_protocol_scheme">fb3541055272608153</string>
    <string name="sign_in_canceled">Sign in canceled!</string>
    <string name="password_match">password\' and \'repeat password\' don\'t match</string>
    <string name="required_field">This field is required!</string>
    <string name="verify_email">Verify your email</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="password_pattern_error">Password must contain at least one digit [0\-9]\nOne lowercase character [a\-z]\nOne uppercase character [A\-Z]\nOne special character like ! @ # &amp; ( )\n8 characters and a maximum of 20 characters</string>
    <string name="verification_email_sent">Verification email sent to %1$s</string>
    <string name="email_verification_failed">Failed to send verification email.</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="email_sent">Reset instruction sent to your email</string>
    <string name="resend_email">Resend email</string>
    <string name="email_verification_msn">An email verification was sent to your account. If you don\'t received it, try resend it</string>
    <string name="failed_send_email">It was not possible to send an email right now. Try it later.</string>
    <string name="share_msg">Get Marvel World from Play Store to know more: link</string>
    <string name="photo_upload_failed">Photo upload feiled</string>
    <string name="update">Update</string>
    <string name="profile_update_failed">Profile update failed</string>
    <string name="delete_account_warning">This operation can\'t be undone. Do you want to continue?</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="account_deleted">Account deleted</string>
    <string name="delete_account_failed">Delete account failed</string>
    <string name="profile_updated">Profile updated</string>
    <string name="registration_failed">Registration failed</string>
    <string name="loading">Loading…</string>
    <string name="no_result_found">No result found :(</string>
    <string name="clear_filter">Clear filter</string>
    <string name="no_favorites_to_display">No favorites to display</string>
    <string name="updating">Updating…</string>
    <string name="sending_email">Sending email…</string>
    <string name="creating_account">Creating account…</string>
    <string name="deleting_account">Deleting account…</string>
</resources>